tests/baselines/reference/genericCallbackInvokedInsideItsContainingFunction1.errors.txt
==== tests/cases/compiler/genericCallbackInvokedInsideItsContainingFunction1.ts (10 errors) ====
    function foo<T, U>(x:T, y:U, f: (v: T) => U) {
        var r1 = f<number>(1);
                 ~~~~~~~~~~~~
!!! error TS2087: Could not select overload for 'call' expression.
        var r2 = f(1);
                 ~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'T' to argument 1 which is of type 'number'.
                 ~
!!! error TS2087: Could not select overload for 'call' expression.
        var r3 = f<any>(null);
                 ~~~~~~~~~~~~
!!! error TS2087: Could not select overload for 'call' expression.
        var r4 = f(null);
    
        var r11 = f(x);
        var r21 = f<number>(x);
                  ~~~~~~~~~~~~
!!! error TS2087: Could not select overload for 'call' expression.
        var r31 = f<any>(null);
                  ~~~~~~~~~~~~
!!! error TS2087: Could not select overload for 'call' expression.
        var r41 = f(null);
    
        var r12 = f(y);
                  ~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'T' to argument 1 which is of type 'U'.
                  ~
!!! error TS2087: Could not select overload for 'call' expression.
        var r22 = f<number>(y);
                  ~~~~~~~~~~~~
!!! error TS2087: Could not select overload for 'call' expression.
        var r32 = f<any>(null);
                  ~~~~~~~~~~~~
!!! error TS2087: Could not select overload for 'call' expression.
        var r42 = f(null);
    }